--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
   "scripts": {
     "test": "jest",
     "build": "yarn clean && tsc --declaration && tsc --module commonjs --outdir lib",
-    "clean": "rm -rf lib && rm -rf module"
+    "clean": "rm -rf lib && rm -rf module",
+    "doc": "typedoc src/index.ts"
   },
   "repository": {
     "type": "git",
@@ -32,6 +33,7 @@
     "jest": "^26.6.3",
     "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
+    "typedoc": "^0.20.28",
     "typescript": "^4.2.2"
   }
 }
