--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "mighty-promise",
   "sideEffects": false,
-  "version": "0.0.1",
+  "version": "0.0.2",
   "description": "Powerful promise utils collections",
   "module": "module/index.js",
   "main": "lib/index.js",
@@ -12,7 +12,8 @@
     "build": "yarn clean && tsc --declaration --module es2015 --outdir module && tsc --module commonjs --outdir lib && yarn build-deno",
     "clean": "rm -rf lib && rm -rf module && rm -rf deno_lib",
     "doc": "typedoc src/index.ts",
-    "build-deno": "denoify"
+    "build-deno": "denoify",
+    "release": "standard-version"
   },
   "repository": {
     "type": "git",
@@ -35,6 +36,7 @@
     "chance": "^1.1.7",
     "denoify": "^0.6.5",
     "jest": "^26.6.3",
+    "standard-version": "^9.3.0",
     "ts-jest": "^26.5.2",
     "ts-node": "^9.1.1",
     "typedoc": "^0.20.28",
