--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "clean": "rm -rf lib && rm -rf module && rm -rf deno_lib",
     "doc": "typedoc src/index.ts",
     "build-deno": "denoify",
-    "release": "yarn build && standard-version"
+    "release": "yarn build && git add . && git commit -m \"chore: release\"&& standard-version"
   },
   "repository": {
     "type": "git",
